<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <EditTextPreference
        android:key="matrix_scroll_text"
        android:defaultValue="iLoger"
        android:summary="@string/fallingText"
        android:title="@string/fallingTextTitle" />

    <EditTextPreference
        android:key="matrix_falling_speed"
        android:defaultValue="10"
        android:summary="@string/fallingSpeed"
        android:title="@string/setSpeedTitle" />

    <EditTextPreference
        android:key="matrix_font_size"
        android:defaultValue="15"
        android:summary="@string/fontSize"
        android:title="@string/setFontSizeTitle" />

    <Preference
        android:key="background_color"
        android:title="@string/backgroundColor"
        android:defaultValue="#FF000000"/>

    <Preference
        android:key="text_color"
        android:title="@string/textColor"
        android:defaultValue="#FF8BFF4A"/>

</PreferenceScreen>