<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/matrixhd"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="it.iloger.wallpaper.MyActivities.RandomWallpaper">

    <it.iloger.wallpaper.MyViews.MyEditText
        android:id="@+id/secondEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/seconds"

        android:inputType="number"
        android:textColor="@android:color/white" />

    <it.iloger.wallpaper.MyViews.MyButton
        style="@style/myButton"
        android:layout_width="173dp"
        android:layout_height="wrap_content"
        android:onClick="startRepeating"
        android:text="@string/start_repeating" />

    <it.iloger.wallpaper.MyViews.MyButton
        style="@style/myButton"
        android:layout_width="172dp"
        android:layout_height="wrap_content"
        android:onClick="stopRepeating"
        android:text="@string/stop_repeating" />

</LinearLayout>