<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/matrixhd"
    tools:context=".MyActivities.LiveWallpaper">

    <it.iloger.wallpaper.MyViews.MyEditText
        android:id="@+id/secondEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:autofillHints=""
        android:ems="10"
        android:hint="@string/seconds"
        android:inputType="number"
        android:textColor="@android:color/white"
        tools:layout_editor_absoluteX="99dp"
        tools:layout_editor_absoluteY="343dp" />

    <it.iloger.wallpaper.MyViews.MyButton
        android:id="@+id/myButton"
        style="@style/myButton"
        android:layout_width="173dp"
        android:layout_height="wrap_content"
        android:onClick="startRepeating"
        android:text="@string/start_repeating"
        tools:layout_editor_absoluteX="119dp"
        tools:layout_editor_absoluteY="472dp" />

    <it.iloger.wallpaper.MyViews.MyButton
        style="@style/myButton"
        android:layout_width="172dp"
        android:layout_height="wrap_content"
        android:onClick="stopRepeating"
        android:text="@string/stop_repeating"
        tools:layout_editor_absoluteX="94dp"
        tools:layout_editor_absoluteY="565dp" />
</android.support.constraint.ConstraintLayout>